# jax-finufft

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: gpu-build.yml  tests.yml  wheels.yml
ci/: Dockerfile  Jenkinsfile
lib/: common.h  cufinufft_wrapper.cc  cufinufft_wrapper.h  jax_finufft.cc  jax_finufft.h  jax_finufft_common.h  jax_finufft_cpu.cc  jax_finufft_cpu.h  jax_finufft_cpu_opts.h  jax_finufft_gpu.cc  jax_finufft_gpu.h  kernel_helpers.h  kernels.cc.cu  kernels.h  nanobind_kernel_helpers.h  pybind11_kernel_helpers.h
src/jax_finufft/: __init__.py  gpu_ops.py  lowering.py  ops.py  options.py  shapes.py  translation.py
src/jax_finufft/custom_call/: CMakeLists.txt  custom_call.py  custom_call_lib.cc
tests/: freethreaded_test.py  gpu_ops_test.py  interpolation_test.py  jac_test.py  ops_test.py  options_test.py  shapes_test.py  sharding_test.py
