[build-system]
requires = ["nanobind", "scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[project]
name = "jax-finufft"
description = "JAX bindings for the Flatiron Institute Nonuniform Fast Fourier Transform library"
readme = "README.md"
authors = [
    { name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" },
    { name = "Lehman Garrison", email = "lgarrison@flatironinstitute.org" },
]
requires-python = ">=3.9"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/dfm/jax-finufft" }
dependencies = ["jax>=0.4.14", "numpy", "pydantic>=2"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "absl-py"]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/jax_finufft/jax_finufft_version.py"]
wheel.install-dir = "jax_finufft"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

# For debugging:
# cmake.build-type = "Debug"
# cmake.verbose = true
# install.strip = false

[tool.setuptools_scm]
version_file = "src/jax_finufft/jax_finufft_version.py"

[tool.cibuildwheel]
skip = "pp* *-musllinux_* *-manylinux_i686"
build-verbosity = 1

[tool.cibuildwheel.linux]
before-all = "yum install -y fftw-devel"

[tool.cibuildwheel.macos]
before-all = "brew install fftw"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.black]
target-version = ["py39"]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = []

[tool.ruff.isort]
known-first-party = ["jax-finufft"]
combine-as-imports = true
